<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="Game_Name">Tic Tac Toe</string>
    <string name="Instruction">Select Game Type</string>
    <string name="sound">Game Sound :</string>
    <string name="oneplayer">1 Player</string>
    <string name="twoPlayer">2 Players</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="three_x_three_grid">3x3 grid</string>
    <string name="symbol">x or o</string>
    <string name="gameType">GameType</string>
    <string name="PlayAgain">New Game</string>
    <string name="OnePlayerGame">1 Player Game</string>
    <string name="TwoPlayerGame">2 Player Game</string>
    <string name="GameWithFriends">Play With Friends</string>
    <string name="Draw">Draw</string>
    <string name="zero">0</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>
    <string name="todo">TODO</string>
</resources>