<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9CF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/GameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/goldman"
        android:text="@string/Game_Name"
        android:textColor="#0091EA"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/OnePlayer"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:onClick="onePlyr"
        android:text="@string/oneplayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameName"
        app:layout_constraintVertical_bias="0.367"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/TwoPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="twoPlyr"
        android:text="@string/twoPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameName"
        app:layout_constraintVertical_bias="0.494"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Instruction"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameName"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/sound"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <RadioGroup
        android:id="@+id/GameSound"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74">

        <RadioButton
            android:id="@+id/On"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/on"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/Off"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/off"
            tools:ignore="TextContrastCheck" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>